t27_documentdb/_aws/documentdb_template.yaml
# AWS EC2/VPC template for MongoDB 
# Peadar Grant

Parameters:

  LatestLinuxImageId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name 
        Value: LAB_VPC
  
  Subnet:
    Type: AWS::EC2::Subnet    
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: LAB_SN
      VpcId: !Ref Vpc 
        
  InternetGateway:
    Type: AWS::EC2::InternetGateway    
    Properties:
      Tags:
      - Key: Name
        Value: LAB_IGW

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment    
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc
    
  RouteTable:
    Type: AWS::EC2::RouteTable    
    Properties:
      Tags:
      - Key: Name
        Value: public_routes
      VpcId: !Ref Vpc

  Route:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation    
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet

  # Security Group w/ Multiple Ingress Rules
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref Vpc
      GroupDescription: allow connections from specified source security group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp: 0.0.0.0/0

  # Instance
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref Subnet
      ImageId: !Ref LatestLinuxImageId
      SecurityGroupIds:
      - !Ref SecurityGroup
      KeyName: LAB_KEY 
        
Outputs:

  VpcId:
    Description: Vpc Id
    Value: !Ref Vpc

  SubnetId:
    Description: Subnet Id
    Value: !Ref Subnet

  PublicIp:
    Value: !GetAtt Instance.PublicIp
    Description: Instance Public Ip
